--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,10 @@ layout: default
     </header>
 
     <article class="post-content">
+        {% if page.image %}
+        <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="post-image">
+        {% endif %}
+        {{ content }}
         {{ content }}
     </article>
 
