--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="{{ '/' | relative_url }}">
-                <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="{{ site.title | default: 'My Awesome Blog' }} Logo">
+                <img src="{{ '/assets/images/logo.jpg' | relative_url }}" alt="{{ site.title | default: 'My Awesome Blog' }} Logo">
             </a>
         </div>
         <nav>
