--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,7 +4,7 @@ title: About Me
 ---
 <div class="about-page">
     <div class="about-header">
-        <img src="/assets/images/your-photo.jpg" alt="Tom Rook" class="about-photo">
+        <img src="/assets/images/your-photo.png" alt="Tom Rook" class="about-photo">
         <h1>About Tom Rook</h1>
     </div>
 
