--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,23 +1,14 @@
 ---
 layout: default
 ---
-<div class="post">
-    <header class="post-header">
-        <h1>{{ page.title }}</h1>
-        <p class="post-meta">
-            Written by <a href="{{ page.author_profile }}">{{ page.author }}</a> on {{ page.date | date: "%B %d, %Y" }} in
-            {% for category in page.categories %}
-                <a href="{{ '/categories/' | relative_url }}#{{ category | slugify }}">{{ category | capitalize }}</a>{% unless forloop.last %}, {% endunless %}
-            {% endfor %}
-        </p>
-    </header>
 
-    <article class="post-content">
-        {% if page.image %}
-        <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="post-image">
-        {% endif %}
-        {{ content }}
-        {{ content }}
-    </article>
+<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<h1>{{ page.title }}</h1>
 
-    </div>
+<p class="view">by {{ page.author | default: site.author }}</p>
+
+{{content}}
+
+{% if page.tags %}
+  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+{% endif %}
