--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: " en-US" }}">
+<html>
+  <head>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% include meta.html %}
 
-    {% seo %}
-    <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    {% include head-custom.html %}
-</head>
 
-<body>
-    <div class="wrapper">
-        <header>
-            <h1><a href="{{ " /" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
-            {% if site.logo %}
-            <img src="{{site.logo | relative_url}}" alt="Logo" />
-            {% endif %}
+    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+  </head>
 
-            <p>{{ site.description | default: site.github.project_tagline }}</p>
+  <body>
+    <div class="wrapper-masthead">
+      <div class="container">
+        <header class="masthead clearfix">
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
-            <p class="view"><a href="{{ site.baseurl }}/about }}"> About Tom <small>Find out more</small></a></p>
+          <div class="site-info">
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <p class="site-description">{{ site.description }}</p>
+          </div>
 
-            <p class="view"><a href="{{ /about }}"> About Tom <small>Find out about Tom</small></a></p>
-
-            {% if site.show_downloads %}
-            <ul class="downloads">
-                <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-                <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-                <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-            </ul>
-            {% endif %}
+          <nav>
+            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+          </nav>
         </header>
-        <section>
-
-            {{ content }}
-
-        </section>
-        <footer>
-            <p>Linked In<a href="https://www.linkedin.com/in/tomrook12/">Tom Rook </a></p>
-        </footer>
+      </div>
     </div>
-    <script src="{{ " /assets/js/scale.fix.js" | relative_url }}"></script>
-</body>
 
+    <div id="main" role="main" class="container">
+      {{ content }}
+    </div>
+
+    <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          {% include svg-icons.html %}
+        </footer>
+      </div>
+    </div>
+
+    {% include analytics.html %}
+  </body>
 </html>
