--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,13 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
+        
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        
+        <p class="view"><a href="{{ /about }}">View My GitHub Profile</a></p>
+
+        <p class="view"><a href="https://www.linkedin.com/in/tomrook12/">View my LinkedIn</a></p>
+
 
         {% if site.show_downloads %}
         <ul class="downloads">
