--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,9 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
+        <p class="view"><a href="{{ site.baseurl }}{{ /about }}">About Tom</a></p>
         
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        
-        <p class="view"><a href="{{ /about }}">View My GitHub Profile</a></p>
 
         <p class="view"><a href="https://www.linkedin.com/in/tomrook12/">View my LinkedIn</a></p>
 
