--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@
       <header>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        <a href="{{ site.baseurl }}">
+            <img src="{{site.logo | relative_url}}" alt="Logo" />
+        </a>
+          
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
