--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,22 +16,19 @@
     <div class="wrapper">
       <header>
 
-        {% if site.logo %}
         <a href="{{ '/' | relative_url }}">
             <img src="{{site.logo | relative_url}}" alt="Logo" />
         </a>
           
-        {% endif %}
-
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <p class="view"><a href="{{ site.baseurl }}{{ /about/ }}">About Tom</a></p>
+        <p class="view"><a href="{{ '/about/' | relative_url }}">About Tom</a></p>
         
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">View my GitHub profile</a></p>
 
         <p class="view"><a href="https://www.linkedin.com/in/tomrook12/">View my LinkedIn</a></p>
 
