--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
 
-        <a href="{{ '/' | relative_url }}">
+        <a href="{{ "/" | absolute_url }}">
             <img src="{{site.logo | relative_url}}" alt="Logo" />
         </a>
           
@@ -28,7 +28,7 @@
 
         <p class="view"><a href="{{ '/about/' | relative_url }}">About Tom</a></p>
         
-        <p class="view"><a href="{{ site.github.owner_url }}">View my GitHub profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">View my GitHub rofile</a></p>
 
         <p class="view"><a href="https://www.linkedin.com/in/tomrook12/">View my LinkedIn</a></p>
 
