--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
-<img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="w-full h-48 object-cover">
+<img src="{{ page.image | absolute_url }}" alt="{{ page.title }}" class="w-full h-48 object-cover">
 
 <p class="view">by {{ page.author | default: site.author }}</p>
 
