--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <p class="view"><a href="{{ '/about/' | absolute_url }}">About Tom</a></p>
+        <p class="view"><a href="{{ '/about' | absolute_url }}">About Tom</a></p>
         
         <p class="view"><a href="{{ site.github.owner_url }}">View my GitHub rofile</a></p>
 
