--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,4 +14,5 @@ layout: default
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
+<a href="{{ "/" | absolute_url }}"><small>back</small></a> 
 
