--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,7 @@ layout: default
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
-<p><a href="{{ "/" | absolute_url }}"><small>back</small></a></p> 
+<p>
+  </br>
+  <a href="{{ "/" | absolute_url }}"><small>back</small></a>
+</p> 
