--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,14 @@ layout: default
 ---
 <img src="{{ page.image | absolute_url }}" alt="{{ page.title }}" class="w-full h-48 object-cover">
 <h1>{{ page.title }}</h1>
-<p class="view">by {{ page.author | default: site.author }}<br>
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<p class="view">
+  {% assign author = site.authors | where: 'short_name', page.author | first %}
+  {% if author %}
+    - <a href="{{ author.url }}">{{ author.name }}</a>
+  {% endif %}
+  {{ page.date | date_to_string }}
 </p>
+
 
 {{content}}
 
