--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,13 @@ layout: default
 <p class="view">by <a href="{{ author.url | absolute_url }}">{{ author.name }}</a><br>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 </p>
+<p>
+  {{ page.date | date_to_string }}
+  {% assign author = site.authors | where: 'short_name', page.author | first %}
+  {% if author %}
+    - <a href="{{ author.url }}">{{ author.name }}</a>
+  {% endif %}
+</p>
 
 {{content}}
 
