--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -13,3 +13,8 @@ layout: default
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
+
+<p>
+  </br>
+  <a href="{{ "/" | absolute_url }}"><small>back</small></a>
+</p> 
