--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
         <p class="view"><a href="{{ '/authors/tom_rook' | absolute_url }}">About Tom</a></p>
         
-        <p class="view"><a href="{{ site.github.owner_url }}">View my GitHub Profile</a></p>
+        {% comment %}<p class="view"><a href="{{ site.github.owner_url }}">View my GitHub Profile</a></p>{% endcomment %}
 
         <p class="view"><a href="https://www.linkedin.com/in/tomrook12/">View my LinkedIn</a></p>
 
